--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Recommect の 広告の cookie 発行ページです。</h1>
+    <h2>Recommect の 広告の cookie 発行ページです。</h1>
+
+    <h3>
+      本ページを複数ドメインで検証する場合は、以下のリンクを広告で設定したURLと同一のものにして遷移してください。
+    </h3>
+    <a href="https://google.com">サンクスページへ</a>
+
+    <h3>
+      本ページを同一ドメインで検証する場合は、以下のサンクスページに遷移してください。
+    </h3>
     <a href="/thanks.html">サンクスページへ</a>
+
     <!-- ここに着地点タグを挿入します。 -->
 
     <!-- ------------------------- -->
