テキストの微修正

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <h3>
       本ページを複数ドメインで検証する場合は、以下のリンクを広告で設定したURLと同一のものにして遷移してください。
     </h3>
-    <a href="https://google.com">サンクスページへ</a>
+    <a href="https://google.com">中間地点ページへ</a>
 
     <h3>
       本ページを同一ドメインで検証する場合は、以下のサンクスページに遷移してください。
     </h3>
     <a href="/thanks.html">サンクスページへ</a>
 
-    <!-- ここに着地点タグを挿入します。 -->
+    <!-- ここに着地点タグを挿入します -->
 
     <!-- ------------------------- -->
 
-    <!-- ※ 同階層に issue_cookie.php を配置してください。 -->
+    <!-- ※ 同階層に issue_cookie.php を配置してください -->
   </body>
 </html>
