--- a/thanks.html
+++ b/thanks.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div>Thanks ページです。</div>
-    <!-- ここに成果地点タグを挿入します。 -->
+    <!-- ここに成果地点タグを挿入します -->
+
+    <!-- ------------------------- -->
   </body>
 </html>
