成果地点変更

--- a/thanks.html
+++ b/thanks.html
@@ -13,7 +13,7 @@
   <!-- ここに成果地点タグを挿入します -->
   <script>
     const rmtConversion = () => {
-      const RMT_AD_ID = 'yw1iKB'
+      const RMT_AD_ID = 'R1xiDB'
       const RMT_AD_ID_KEY = '_rmt_ad_id_'
       const RMT_SID_KEY = '_rmt_sid_'
 
