CVできないのを修正

--- a/thanks.html
+++ b/thanks.html
@@ -64,7 +64,7 @@
         rmt_sid: rmtSid
       }
 
-      const url = 'https://stg-entry-api.recommect.com'
+      const url = 'https://stg-entry-api.recommect.com/v1/entry/advertisements/R1xiDB/conversion'
       const xhr = new XMLHttpRequest()
       xhr.open('POST', url)
       xhr.send(params)
