yom用にアフィリエイトタグを修正

--- a/thanks.html
+++ b/thanks.html
@@ -13,7 +13,7 @@
   <!-- ここに成果地点タグを挿入します -->
   <script>
     const rmtConversion = () => {
-      const RMT_AD_ID = 'yaYiYy'
+      const RMT_AD_ID = 'R8PixO'
       const RMT_AD_ID_KEY = '_rmt_ad_id_'
       const RMT_SID_KEY = '_rmt_sid_'
 
@@ -64,7 +64,7 @@
         rmt_sid: rmtSid
       })
 
-      const url = 'https://stg-entry-api.recommect.com/v1/entry/advertisements/yaYiYy/conversion'
+      const url = 'https://stg-entry-api.recommect.com/v1/entry/advertisements/R8PixO/conversion'
       const xhr = new XMLHttpRequest()
       xhr.open('POST', url)
       xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
